# voprf-poc

./: .gitmodules  README.md
.github/workflows/: actions.yml
go/: Makefile  README.md  docs.sh  go.mod  go.sum  main.go
go/client/: client.go  client_test.go
go/err/: err.go
go/jsonrpc/: jsonrpc.go
go/oerr/: oerr.go
go/oprf/: oprf.go  oprf_test.go
go/oprf/groups/: group.go
go/oprf/groups/dleq/: dleq.go  dleq_test.go
go/oprf/groups/ecgroup/: ec.go  ec_test.go  h2c.go  h2c_test.go
go/oprf/oprfCrypto/: oprfCrypto.go
go/oprf/utils/: comparison.go  conversion.go  hkdf.go
go/server/: server.go  server_test.go
go/vectors/: allVectors.json
js/: README.md
rust/: Cargo.toml  Makefile  README.md
rust/benches/: oprf.rs
rust/src/: lib.rs
rust/src/errors/: mod.rs
rust/src/http/: client.rs  jsonrpc.rs  mod.rs  server.rs
rust/src/oprf/: ciphersuite.rs  mod.rs
rust/src/oprf/groups/: mod.rs  p384.rs  p384_redox.rs  ristretto.rs
rust/src/oprf/groups/redox_ecc/: macros.rs  mod.rs
rust/src/utils/: mod.rs
test-vectors/: VOPRF-P384-HKDF-SHA512-SSWU-RO.json  VOPRF-P521-HKDF-SHA512-SSWU-RO.json  VOPRF-curve448-HKDF-SHA512-ELL2-RO.json  voprf-p384-hkdf-sha512-sswu-ro.json  voprf-p521-hkdf-sha512-sswu-ro.json
test-vectors/hash-to-curve/: curve448-sha512-ell2-ro-.json  p384-sha512-sswu-ro-.json  p521-sha512-sswu-ro-.json
