[package]
name = "voprf-rs"
version = "0.0.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

[dependencies]
curve25519-dalek = "2.0.0"
sha2 = "0.8.1"
rand_core = "0.5.1"
hmac = "0.7.1"
digest = "0.8.1"
byteorder = "1.3.2"
ecc-rs = {path = "ecc-rs"}
hkdf-sha512 = {path = "ecc-rs/hkdf-sha512"}
num = "0.2.1"
num-bigint = "0.2.5"
hex = "0.4.0"
rouille = "3.0.0"
reqwest = {version="0.10.1",features=["blocking","json"]}
serde_json = "1.0.45"
serde = { version = "1.0.104", features = ["derive"] }
clap = "2.33.0"
criterion = "0.3.1"

[[bench]]
name = "oprf"
harness = false